# Connect

./: .env.example  .env.production.example  .gitattributes  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_LINUX_SERVER.md  README.md  codex.md  docker-compose.yml  docker-entrypoint.sh  generate_jwt.py  pyproject.toml  railway-beat.json  railway-worker.json  railway.json  start-worker.sh  test.env  wait-for-db.sh
.github/workflows/: ci-main.yml  ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy-main.yml  deploy-server.yml  deploy-to-linux-server.yml  deploy.yml
alembic/: env.py
alembic/versions/: 2b7a9c1d4e55_add_connect_auth_tables.py  9f3c1b7a2d11_add_analytics_tables.py  f0d4e6a2c1ab_phase1_text_rls.py
app/: main.py
app/core/: auth.py  config.py  logging.py  security_controls.py
app/crud/: analytics.py  post.py
app/db/: database.py  models.py
app/middleware/: __init__.py  jwt_context.py
app/models/: analytics_metric_snapshot.py  analytics_subject.py  analytics_sync_run.py  auth_token.py  connect_user.py  post_media.py
app/schemas/: account.py  analytics.py  media.py  post.py
app/services/: analytics_service.py  connect_access_service.py  connect_auth_service.py  email_service.py  media_service.py  (+3 more)
docs/: LOGGING_DEMO.md  rls_phase1.md  sheet_30_day_roadmap.tsv  sheet_daily_report_template.tsv  sheet_work_log_last_two_days.tsv
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
tests/: conftest.py  test_api_endpoints.py  test_auth_deps.py  test_post_routes.py  test_provider_publishers.py
(+77 files in other folders)
